syntax = "proto3";

package llm;

option go_package = "./pb";


message GenerateNicknameRequest {
  repeated string selectedNicknamesFromPool = 1;

}



message GenerateNicknameResponse {
  string nickname = 1;
}

message NanoContentRequest {
    string file_name = 1;
    string id = 2;
    string user_id = 3;
    bytes chunk = 4;
}
message NanoContentResponse {
  string file_name = 1;
  uint32 size = 2;
}



service LlmService {
  rpc GenerateNickname(stream GenerateNicknameRequest) returns (stream GenerateNicknameResponse) {}
  rpc NanoContent(stream NanoContentRequest) returns(NanoContentResponse);
}